# ask-back-i

./: .coveragerc  .env.example  .gitignore  README.md  create_inquiry_learning_data.py  insert_abilities.py  insert_rubrics.py  migrate_decimal_points.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  test_two_fa_service_standalone.py
.github/workflows/: main_ask-app-backend-dev-02.yml
app/: main.py
app/api/: ability_analysis.py  admin_database.py  admin_users.py  auth.py  dashboard.py  deps.py  posts.py  thanks_letters.py  two_fa.py  users.py
app/core/: config.py  database.py  rate_limit.py  security.py
app/models/: non_cog_ability.py  post.py  post_ability_point.py  post_like.py  thanks_letter.py  thanks_letter_ability_point.py  user.py
app/repositories/: login_log_repository.py  session_repository.py  temp_token_repository.py  user_repository.py
app/schemas/: admin_user.py  auth.py  post.py  thanks_letter.py  user.py
app/services/: ability_analyzer_service.py  admin_user_service.py  auth_service.py  two_fa_service.py
docs/: ASK_セキュリティ要件.md  ASK_セキュリティ要件_初心者向け解説.md  NON_COG_ABILITIES_MEMO.md  ability_analysis_logic.md
migrations/: README.md  add_2fa_tables.sql  add_2fa_tables_mysql.sql  add_post_likes_table.py  add_posts_system_tables.sql  run_migration.py  run_migration_simple.py
scripts/: seed_post_likes.py
tests/: conftest.py  test_api_integration.py  test_auth_service.py  test_repositories.py  test_security.py  test_temp_token_repository.py  test_two_fa_api.py  test_two_fa_service.py  test_user_repository.py
